#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
authors = { workspace = true }
categories = { workspace = true }
description = "Internal crate for zenoh."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-examples"
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
publish = false

[features]
default = ["zenoh-ext/default", "zenoh/default"]
shared-memory = ["zenoh/shared-memory"]
unstable = ["zenoh/unstable"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std", "rt-multi-thread", "time"] }
zenoh = { workspace = true, default-features = false }
zenoh-ext = { workspace = true, default-features = false, features = [
  "unstable",
] }

[dev-dependencies]
rand = { workspace = true, features = ["default"] }

[build-dependencies]
prost-build = "0.13"
which = "7.0.2"

[[example]]
name = "z_scout"
path = "examples/z_scout.rs"

[[example]]
name = "z_info"
path = "examples/z_info.rs"

[[example]]
name = "z_put"
path = "examples/z_put.rs"

[[example]]
name = "z_put_float"
path = "examples/z_put_float.rs"

[[example]]
name = "z_delete"
path = "examples/z_delete.rs"

[[example]]
name = "z_formats"
path = "examples/z_formats.rs"

[[example]]
name = "z_pub"
path = "examples/z_pub.rs"

[[example]]
name = "z_pub_shm"
path = "examples/z_pub_shm.rs"
required-features = ["shared-memory", "unstable"]

[[example]]
name = "z_sub"
path = "examples/z_sub.rs"

[[example]]
name = "z_sub_shm"
path = "examples/z_sub_shm.rs"
required-features = ["shared-memory", "unstable"]

[[example]]
name = "z_pull"
path = "examples/z_pull.rs"

[[example]]
name = "z_querier"
path = "examples/z_querier.rs"

[[example]]
name = "z_queryable"
path = "examples/z_queryable.rs"

[[example]]
name = "z_queryable_shm"
path = "examples/z_queryable_shm.rs"
required-features = ["shared-memory", "unstable"]

[[example]]
name = "z_storage"
path = "examples/z_storage.rs"

[[example]]
name = "z_get"
path = "examples/z_get.rs"

[[example]]
name = "z_get_shm"
path = "examples/z_get_shm.rs"
required-features = ["shared-memory", "unstable"]

[[example]]
name = "z_forward"
path = "examples/z_forward.rs"

[[example]]
name = "z_liveliness"
path = "examples/z_liveliness.rs"

[[example]]
name = "z_sub_liveliness"
path = "examples/z_sub_liveliness.rs"

[[example]]
name = "z_get_liveliness"
path = "examples/z_get_liveliness.rs"

[[example]]
name = "z_pub_thr"
path = "examples/z_pub_thr.rs"

[[example]]
name = "z_sub_thr"
path = "examples/z_sub_thr.rs"

[[example]]
name = "z_pub_shm_thr"
path = "examples/z_pub_shm_thr.rs"
required-features = ["shared-memory", "unstable"]

[[example]]
name = "z_ping"
path = "examples/z_ping.rs"

[[example]]
name = "z_ping_shm"
path = "examples/z_ping_shm.rs"
required-features = ["shared-memory", "unstable"]

[[example]]
name = "z_pong"
path = "examples/z_pong.rs"

[[example]]
name = "z_alloc_shm"
path = "examples/z_alloc_shm.rs"
required-features = ["shared-memory", "unstable"]

[[example]]
name = "z_bytes_shm"
path = "examples/z_bytes_shm.rs"
required-features = ["shared-memory", "unstable"]

[[example]]
name = "z_posix_shm_provider"
path = "examples/z_posix_shm_provider.rs"
required-features = ["shared-memory", "unstable"]
