;
; Copyright (c) 2017, 2020 ADLINK Technology Inc.
;
; This program and the accompanying materials are made available under the
; terms of the Eclipse Public License 2.0 which is available at
; http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
; which is available at https://www.apache.org/licenses/LICENSE-2.0.
;
; SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
;
; Contributors:
;   ADLINK zenoh team, <zenoh@adlink-labs.tech>
;

(executable
  (name      test_zenoh)
  (modules   test_zenoh test_zenoh_common test_selector)
  (libraries zenoh_common alcotest))

(alias
 (name runtest)
  (deps test_zenoh.exe)
  (action (run %{exe:test_zenoh.exe} -q --color=always)))
