[package]
name = "zenoh-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-core = { path = "../zenoh-core/" }
zenoh-sync = { path = "../zenoh-sync/" }
async-trait = "0.1.42"
async-std = { version = "=1.9.0", features = ["unstable"] }
flume = "0.10.5"
log = "0.4.14"
