[package]
name = "zenoh-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-core = { path = "../zenoh-core/" }
aes = "0.7.4"
hmac = { version = "0.11.0", features = ["std"] }
rand = "0.8.3"
rand_chacha = "0.3.0"
sha3 = "0.9.1"
