#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
authors = ["Julien Enoch <julien@enoch.fr>", "kydos <angelo@icorsaro.net>"]
categories = { workspace = true }
description = "Zenoh: extensions to the client API."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-ext"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["zenoh/default"]
internal = []
unstable = ["zenoh/internal", "zenoh/unstable"]

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
leb128 = { workspace = true }
serde = { workspace = true, features = ["default"] }
tokio = { workspace = true, features = [
  "io-std",
  "macros",
  "rt",
  "sync",
  "time",
] }
tracing = { workspace = true }
uhlc = { workspace = true }
zenoh = { workspace = true, default-features = false }
zenoh-macros = { workspace = true }
zenoh-util = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
zenoh-config = { workspace = true }

[package.metadata.docs.rs]
features = ["unstable"]
