#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-perf"
version = "0.5.0-beta.6"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com>",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh: Zero Overhead Pub/sub, Store/Query and Compute."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }


[dependencies]
zenoh =  { version = "0.5.0-beta.6", path = "../zenoh" }
zenoh-protocol =  { version = "0.5.0-beta.6", path = "../zenoh-protocol" }
zenoh-router =  { version = "0.5.0-beta.6", path = "../zenoh-router" }
zenoh-util =  { version = "0.5.0-beta.6", path = "../zenoh-util" }
async-std = "=1.9.0"
async-trait = "0.1.42"
rand = "0.8.3"
slab = "0.4.2"
time = "0.2.25"
uuid = { version = "0.8.2", features = ["v4"] }
clap = "2.33.3"
log = "0.4.14"
env_logger = "0.8.2"

[profile.release]
debug=false
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "api_thr_sub_peer"
test = false
bench = false

[[bin]]
name = "session_thr_sink_tcp"
test = false
bench = false

[[bin]]
name = "session_thr_sub_peer"
test = false
bench = false

[[bin]]
name = "session_thr_pub_peer"
test = false
bench = false

[[bin]]
name = "session_thr_pubsub_peer"
test = false
bench = false

[[bin]]
name = "session_thr_sub_client"
test = false
bench = false

[[bin]]
name = "session_thr_pub_client"
test = false
bench = false

[[bin]]
name = "session_thr_pubsub_client"
test = false
bench = false

[[bin]]
name = "session_thr_router"
test = false
bench = false

[[bin]]
name = "session_ping_peer"
test = false
bench = false

[[bin]]
name = "session_pong_peer"
test = false
bench = false

[[bin]]
name = "session_delay_sub_peer"
test = false
bench = false

[[bin]]
name = "session_delay_pub_peer"
test = false
bench = false



[[bin]]
name = "router_thr_sub_peer"
test = false
bench = false

[[bin]]
name = "router_thr_pub_peer"
test = false
bench = false

[[bin]]
name = "router_thr_sub_client"
test = false
bench = false

[[bin]]
name = "router_thr_pub_client"
test = false
bench = false

[[bin]]
name = "router_thr_sub_light_client"
test = false
bench = false

[[bin]]
name = "router_thr_pub_light_client"
test = false
bench = false


[[bin]]
name = "util_fifo_queue"
test = false
bench = false

[[bin]]
name = "util_priority_queue"
test = false
bench = false

[[bin]]
name = "util_credit_queue"
test = false
bench = false

[[bin]]
name = "util_credit_queue_batching"
test = false
bench = false

[[bin]]
name = "zn_ping"
test = false
bench = false

[[bin]]
name = "zn_pong"
test = false
bench = false

[[bin]]
name = "z_ping"
test = false
bench = false

[[bin]]
name = "z_pong"
test = false
bench = false
