#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-protocol"
version = "0.5.0-beta.1"
repository = "https://github.com/eclipse-zenoh/zenoh/tree/rust-master"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com>",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh: Zero Overhead Pub/sub, Store/Query and Compute."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "...", branch = "rust-master" }
maintenance = { status = "actively-developed" }


[features]
tcp = []
udp = []
default = ["tcp", "udp"]

[dependencies]
async-trait = "0.1.38"
env_logger = "0.7.1"
hex = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.7.3"
http-types = "2.4.0"
uuid = { version = "0.8.1", features = ["v4"] }
uhlc = "0.2"
zenoh-util =  { version = "0.5.0-beta.1", path = "../zenoh-util" }

[dependencies.async-std]
version = "=1.6.4"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "rwbuf_bench"
harness = false

[[bench]]
name = "rname_bench"
harness = false

[[bench]]
name = "data_creation"
harness = false
