#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-router"
version = "0.5.0-beta.1"
repository = "https://github.com/eclipse-zenoh/zenoh/tree/rust-master"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["networking", "edge-computing", "protocol", "iot", "pub/sub", "geo-distributed storages"]
description = "Zenoh: Zero Overhead Pub/sub, Store/Query and Compute."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "...", branch = "rust-master" }
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.38"
futures = "0.3.5"
rand = "0.7.3"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
libloading = "0.6.3"
log = "0.4"
env_logger = "0.7.1"
clap = "2"
serde_json = { version = "1.0", features = ["preserve_order"] }
socket2 = "0.3.12"
uhlc = "0.2"
zenoh-protocol =  { version = "0.5.0-beta.1", path = "../zenoh-protocol" }
zenoh-util =  { version = "0.5.0-beta.1", path = "../zenoh-util" }
hex = "0.4"

[dependencies.async-std]
version = "=1.6.2"
features = ["unstable"]

[dev-dependencies]
criterion = "0.3.3"

[features]
default = []

[[bench]]
name = "tables_bench"
harness = false

[[bin]]
name = "zenohd"
test = false
bench = false
