#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-router"
version = "0.5.0-beta.5"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "The zenoh router"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-protocol =  { version = "0.5.0-beta.5", path = "../zenoh-protocol", features = ["transport_tcp", "transport_udp"] }
zenoh-util =  { version = "0.5.0-beta.5", path = "../zenoh-util" }
async-std = { version = "=1.9.0", features = ["unstable"] }
async-trait = "0.1.42"
futures = "0.3.12"
rand = "0.8.3"
uhlc = "0.2.1"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
libloading = "0.6.7"
serde_json = { version = "1.0", features = ["preserve_order"] }
socket2 = "0.3.19"
petgraph = "0.5.1"
hex = "0.4"
git-version = "0.3.4"
clap = "2"
log = "0.4"
env_logger = "0.8.2"

[build-dependencies]
rustc_version = "0.3"

[dev-dependencies]
criterion = "0.3.4"

[features]
default = []

[[bench]]
name = "tables_bench"
harness = false

[[bin]]
name = "zenohd"
test = false
bench = false

[package.metadata.deb]
name = "zenohd"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2020 ADLINK Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
