#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-util"
version = "0.5.0-beta.1"
repository = "https://github.com/eclipse-zenoh/zenoh/tree/rust-master"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"
license = "Eclipse Public License v2 OR Apache-2.0"
categories = ["networking", "edge-computing", "protocol", "iot", "pub/sub", "geo-distributed storages"]
description = "Zenoh: Zero Overhead Pub/sub, Store/Query and Compute."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "...", branch = "rust-master" }
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1.38"
futures = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.7.3"
hex = "0.4.2"
humantime = "2.0"
clap = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["iphlpapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.77"
pnet = "0.26.0"

[dependencies.async-std]
version = "=1.6.2"
features = ["unstable"]
