#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-util"
version = "0.5.0-dev"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh: Zero Overhead Pub/sub, Store/Query and Compute."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-std = { version = "=1.9.0", features = ["unstable"] }
async-trait = "0.1.42"
event-listener = "2.5.1"
futures = "0.3.12"
aes-soft = "0.6.4"
lazy_static = "1.4.0"
rand = "0.8.3"
rand_chacha = "0.3.0"
hex = "0.4.2"
humantime = "2.1.0"
libloading = "0.7.0"
shellexpand = "2.1.0"
home = "0.5.3"
hmac = "0.10.1"
sha3 = "0.9.1"
clap = "2"
log = "0.4.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["iphlpapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.85"
pnet = "0.27.2"
